# TDepo

./: .gitignore  CMakeLists.txt  TDepo.sln  copyFiles.bat
Debugtinyxml/: tinyxml.bsc  tinyxml.lib  vc120.idb
Debugtinyxml/tinyxml.tlog/: BscMake.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  bscmake.read.1.tlog  bscmake.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  tinyxml.lastbuildstate
Irrlicht/: Irrlicht12.0.vcxproj
TDepo/: TDepo.vcxproj  TDepo.vcxproj.filters  resource.h
config/: graphic.cfg  plugins_Debug.cfg
data/: data.cfg
data/materials/script/: Ogre.material
data/models/: ogrehead.mesh
data/procedural_objects/: RP65_RailFront.xml
data/save/Test001/: enviroment.xml  railroad.xml
dependences/: CMakeLists.txt
dependences/irrlicht-1.8.4/: CMakeLists.txt
dependences/irrlicht-1.8.4/include/: IrrCompileConfig.h
dependences/irrlicht-1.8.4/source/Irrlicht/: CD3D9Driver.cpp  CFileSystem.cpp  CIrrDeviceWin32.cpp  COSOperator.cpp  COpenGLDriver.cpp
dependences/tinyxml/: tinyxml_lib.vcxproj
dependences/tinyxml-2.6.2/: CMakeLists.txt  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp  xmltest.cpp
dependences/tinyxml-2.6.2/include/: tinyxml.h
src/: CMakeLists.txt  TDepo.cpp
src/common/: CameraState.cpp  CameraState.h  FileSystem.cpp  FileSystem.h  GraphicMath.cpp  GraphicMath.h  MouseButtons.h  Ray3D.cpp  Ray3D.h  StringConvertors.cpp  StringConvertors.h  Vector2D.h  Vector2DFloat.cpp  Vector2DFloat.h  Vector3D.h  Vector3DFloat.cpp  Vector3DFloat.h
src/exceptions/: ArrayException.cpp  ArrayException.h  ConvertException.cpp  ConvertException.h  FileSystemException.cpp  FileSystemException.h  ResourcesException.cpp  ResourcesException.h  TDepoException.cpp  TDepoException.h  XMLException.cpp  XMLException.h
src/gameState/: gameState.cpp  gameState.h  gameStateDefines.h  saveGame.cpp  saveGame.h  statePlay.cpp  statePlay.h
src/graphics/: GraphicSystem.cpp  GraphicSystem.h  InputListeners.cpp  InputListeners.h  InputSystem.cpp  InputSystem.h  SdlInputHandler.cpp  SdlInputHandler.h  WorldCamera.cpp  WorldCamera.h  WorldTimer.cpp  WorldTimer.h
src/objects/: BaseGameObject.cpp  BaseGameObject.h  RailConnector.cpp  RailConnector.h  RailMesh.cpp  RailMesh.h  RailSystem.cpp  RailSystem.h  RailWay.cpp  RailWay.h  Rails.cpp  Rails.h  SimpleCube.cpp  SimpleCube.h
src/objects/SaveGameLinkers/: ConnectorPair.cpp  ConnectorPair.h  ConnectorPairLinker.cpp  ConnectorPairLinker.h
src/resources/: ProceduralProfile.cpp  ProceduralProfile.h  ResourceLoader.cpp  ResourceLoader.h  resourcesStorage.cpp  resourcesStorage.h
