cmake_minimum_required(VERSION 3.8)
project(irrlicht)

#add_definitions(-D_IRR_WINDOWS_API_)
add_definitions(-D_IRR_STATIC_LIB_)

set(CXXINCS "-Iinclude -Izlib -Ijpeglib -Ilibpng")
include_directories(source/Irrlicht/zlib)

set(source_GUI
    source/Irrlicht/BuiltInFont.h
    source/Irrlicht/CDefaultGUIElementFactory.cpp
    source/Irrlicht/CDefaultGUIElementFactory.h
    source/Irrlicht/CGUIButton.cpp
    source/Irrlicht/CGUIButton.h
    source/Irrlicht/CGUICheckbox.cpp
    source/Irrlicht/CGUICheckbox.h
    source/Irrlicht/CGUIColorSelectDialog.h
    source/Irrlicht/CGUIComboBox.cpp
    source/Irrlicht/CGUIComboBox.h
    source/Irrlicht/CGUIContextMenu.cpp
    source/Irrlicht/CGUIContextMenu.h
    source/Irrlicht/CGUIEditBox.cpp
    source/Irrlicht/CGUIEditBox.h
    source/Irrlicht/CGUIEnvironment.cpp
    source/Irrlicht/CGUIEnvironment.h
    source/Irrlicht/CGUIFileOpenDialog.cpp
    source/Irrlicht/CGUIFileOpenDialog.h
    source/Irrlicht/CGUIFont.cpp
    source/Irrlicht/CGUIFont.h
    source/Irrlicht/CGUIImage.cpp
    source/Irrlicht/CGUIImage.h
    source/Irrlicht/CGUIImageList.cpp
    source/Irrlicht/CGUIImageList.h
    source/Irrlicht/CGUIInOutFader.cpp
    source/Irrlicht/CGUIInOutFader.h
    source/Irrlicht/CGUIListBox.cpp
    source/Irrlicht/CGUIListBox.h
    source/Irrlicht/CGUIMenu.cpp
    source/Irrlicht/CGUIMenu.h
    source/Irrlicht/CGUIMeshViewer.cpp
    source/Irrlicht/CGUIMeshViewer.h
    source/Irrlicht/CGUIMessageBox.cpp
    source/Irrlicht/CGUIMessageBox.h
    source/Irrlicht/CGUIModalScreen.cpp
    source/Irrlicht/CGUIModalScreen.h
    source/Irrlicht/CGUIScrollBar.cpp
    source/Irrlicht/CGUIScrollBar.h
    source/Irrlicht/CGUISkin.cpp
    source/Irrlicht/CGUISkin.h
    source/Irrlicht/CGUISpinBox.cpp
    source/Irrlicht/CGUISpinBox.h
    source/Irrlicht/CGUISpriteBank.cpp
    source/Irrlicht/CGUISpriteBank.h
    source/Irrlicht/CGUIStaticText.cpp
    source/Irrlicht/CGUIStaticText.h
    source/Irrlicht/CGUITabControl.cpp
    source/Irrlicht/CGUITabControl.h
    source/Irrlicht/CGUITable.cpp
    source/Irrlicht/CGUITable.h
    source/Irrlicht/CGUIToolBar.cpp
    source/Irrlicht/CGUIToolBar.h
    source/Irrlicht/CGUITreeView.cpp
    source/Irrlicht/CGUITreeView.h
    source/Irrlicht/CGUIWindow.cpp
    source/Irrlicht/CGUIWindow.h)

set(source_VIDEO
    source/Irrlicht/CCgMaterialRenderer.cpp
    source/Irrlicht/CCgMaterialRenderer.h
    source/Irrlicht/CVideoModeList.cpp
    source/Irrlicht/CVideoModeList.h)

set(source_SOFTWARE
    source/Irrlicht/CSoftwareDriver.cpp
    source/Irrlicht/CSoftwareDriver.h
    source/Irrlicht/CSoftwareTexture.cpp
    source/Irrlicht/CSoftwareTexture.h
    source/Irrlicht/CTRFlat.cpp
    source/Irrlicht/CTRFlatWire.cpp
    source/Irrlicht/CTRGouraud.cpp
    source/Irrlicht/CTRGouraudWire.cpp
    source/Irrlicht/CTRTextureFlat.cpp
    source/Irrlicht/CTRTextureFlatWire.cpp
    source/Irrlicht/CTRTextureGouraud.cpp
    source/Irrlicht/CTRTextureGouraud.h
    source/Irrlicht/CTRTextureGouraudAdd.cpp
    source/Irrlicht/CTRTextureGouraudNoZ.cpp
    source/Irrlicht/CTRTextureGouraudWire.cpp
    source/Irrlicht/CZBuffer.cpp
    source/Irrlicht/CZBuffer.h
    source/Irrlicht/ITriangleRenderer.h
    source/Irrlicht/IZBuffer.h
    source/Irrlicht/S2DVertex.h)

set(source_OPENGL
    source/Irrlicht/COpenGLCgMaterialRenderer.cpp
    source/Irrlicht/COpenGLCgMaterialRenderer.h
    source/Irrlicht/COpenGLDriver.cpp
    source/Irrlicht/COpenGLDriver.h
    source/Irrlicht/COpenGLExtensionHandler.cpp
    source/Irrlicht/COpenGLExtensionHandler.h
    source/Irrlicht/COpenGLMaterialRenderer.h
    source/Irrlicht/COpenGLNormalMapRenderer.cpp
    source/Irrlicht/COpenGLNormalMapRenderer.h
    source/Irrlicht/COpenGLParallaxMapRenderer.cpp
    source/Irrlicht/COpenGLParallaxMapRenderer.h
    source/Irrlicht/COpenGLShaderMaterialRenderer.cpp
    source/Irrlicht/COpenGLShaderMaterialRenderer.h
    source/Irrlicht/COpenGLSLMaterialRenderer.cpp
    source/Irrlicht/COpenGLSLMaterialRenderer.h
    source/Irrlicht/COpenGLTexture.cpp
    source/Irrlicht/COpenGLTexture.h
    source/Irrlicht/glext.h
    source/Irrlicht/wglext.h)

set(source_D3D8
    source/Irrlicht/CD3D8Driver.cpp
    source/Irrlicht/CD3D8Driver.h
    source/Irrlicht/CD3D8MaterialRenderer.h
    source/Irrlicht/CD3D8NormalMapRenderer.cpp
    source/Irrlicht/CD3D8NormalMapRenderer.h
    source/Irrlicht/CD3D8ParallaxMapRenderer.cpp
    source/Irrlicht/CD3D8ParallaxMapRenderer.h
    source/Irrlicht/CD3D8ShaderMaterialRenderer.cpp
    source/Irrlicht/CD3D8ShaderMaterialRenderer.h
    source/Irrlicht/CD3D8Texture.cpp
    source/Irrlicht/CD3D8Texture.h)

set(source
    source/Irrlicht/CColorConverter.cpp
    source/Irrlicht/CColorConverter.h
    source/Irrlicht/CFPSCounter.cpp
    source/Irrlicht/CFPSCounter.h
    source/Irrlicht/CImage.cpp
    source/Irrlicht/CImage.h
    source/Irrlicht/CImageLoaderBMP.cpp
    source/Irrlicht/CImageLoaderBMP.h
    source/Irrlicht/CImageLoaderDDS.cpp
    source/Irrlicht/CImageLoaderDDS.h
    source/Irrlicht/CImageLoaderJPG.cpp
    source/Irrlicht/CImageLoaderJPG.h
    source/Irrlicht/CImageLoaderPCX.cpp
    source/Irrlicht/CImageLoaderPCX.h
    source/Irrlicht/CImageLoaderPNG.cpp
    source/Irrlicht/CImageLoaderPNG.h
    source/Irrlicht/CImageLoaderPPM.cpp
    source/Irrlicht/CImageLoaderPPM.h
    source/Irrlicht/CImageLoaderPSD.cpp
    source/Irrlicht/CImageLoaderPSD.h
    source/Irrlicht/CImageLoaderRGB.cpp
    source/Irrlicht/CImageLoaderRGB.h
    source/Irrlicht/CImageLoaderTGA.cpp
    source/Irrlicht/CImageLoaderTGA.h
    source/Irrlicht/CImageLoaderWAL.cpp
    source/Irrlicht/CImageLoaderWAL.h
    source/Irrlicht/CNullDriver.cpp
    source/Irrlicht/CNullDriver.h
    source/Irrlicht/IImagePresenter.h)

set(source_WRITER
    source/Irrlicht/CImageWriterBMP.cpp
    source/Irrlicht/CImageWriterBMP.h
    source/Irrlicht/CImageWriterJPG.cpp
    source/Irrlicht/CImageWriterJPG.h
    source/Irrlicht/CImageWriterPCX.cpp
    source/Irrlicht/CImageWriterPCX.h
    source/Irrlicht/CImageWriterPNG.cpp
    source/Irrlicht/CImageWriterPNG.h
    source/Irrlicht/CImageWriterPPM.cpp
    source/Irrlicht/CImageWriterPPM.h
    source/Irrlicht/CImageWriterPSD.cpp
    source/Irrlicht/CImageWriterPSD.h
    source/Irrlicht/CImageWriterTGA.cpp
    source/Irrlicht/CImageWriterTGA.h)

set(source_D3D9
    source/Irrlicht/CD3D9CgMaterialRenderer.cpp
    source/Irrlicht/CD3D9CgMaterialRenderer.h
    source/Irrlicht/CD3D9Driver.cpp
    source/Irrlicht/CD3D9Driver.h
    source/Irrlicht/CD3D9HLSLMaterialRenderer.cpp
    source/Irrlicht/CD3D9HLSLMaterialRenderer.h
    source/Irrlicht/CD3D9MaterialRenderer.h
    source/Irrlicht/CD3D9NormalMapRenderer.cpp
    source/Irrlicht/CD3D9NormalMapRenderer.h
    source/Irrlicht/CD3D9ParallaxMapRenderer.cpp
    source/Irrlicht/CD3D9ParallaxMapRenderer.h
    source/Irrlicht/CD3D9ShaderMaterialRenderer.cpp
    source/Irrlicht/CD3D9ShaderMaterialRenderer.h
    source/Irrlicht/CD3D9Texture.cpp
    source/Irrlicht/CD3D9Texture.h)

set(source_BURNINGVIDEO
    source/Irrlicht/CBurningShader_Raster_Reference.cpp
    source/Irrlicht/CDepthBuffer.cpp
    source/Irrlicht/CDepthBuffer.h
    source/Irrlicht/CSoftware2MaterialRenderer.h
    source/Irrlicht/CSoftwareDriver2.cpp
    source/Irrlicht/CSoftwareDriver2.h
    source/Irrlicht/CSoftwareTexture2.cpp
    source/Irrlicht/CSoftwareTexture2.h
    source/Irrlicht/CTRGouraud2.cpp
    source/Irrlicht/CTRGouraudAlpha2.cpp
    source/Irrlicht/CTRGouraudAlphaNoZ2.cpp
    source/Irrlicht/CTRNormalMap.cpp
    source/Irrlicht/CTRStencilShadow.cpp
    source/Irrlicht/CTRTextureBlend.cpp
    source/Irrlicht/CTRTextureDetailMap2.cpp
    source/Irrlicht/CTRTextureGouraud2.cpp
    source/Irrlicht/CTRTextureGouraudAdd2.cpp
    source/Irrlicht/CTRTextureGouraudAddNoZ2.cpp
    source/Irrlicht/CTRTextureGouraudAlpha.cpp
    source/Irrlicht/CTRTextureGouraudAlphaNoZ.cpp
    source/Irrlicht/CTRTextureGouraudNoZ2.cpp
    source/Irrlicht/CTRTextureGouraudVertexAlpha2.cpp
    source/Irrlicht/CTRTextureLightMap2_Add.cpp
    source/Irrlicht/CTRTextureLightMap2_M1.cpp
    source/Irrlicht/CTRTextureLightMap2_M2.cpp
    source/Irrlicht/CTRTextureLightMap2_M4.cpp
    source/Irrlicht/CTRTextureLightMapGouraud2_M4.cpp
    source/Irrlicht/CTRTextureWire2.cpp
    source/Irrlicht/IBurningShader.cpp
    source/Irrlicht/IBurningShader.h
    source/Irrlicht/IDepthBuffer.h
    source/Irrlicht/S4DVertex.h
    source/Irrlicht/SoftwareDriver2_compile_config.h
    source/Irrlicht/SoftwareDriver2_helper.h)

set(source_SCENEIMPL
    source/Irrlicht/CDefaultSceneNodeAnimatorFactory.cpp
    source/Irrlicht/CDefaultSceneNodeAnimatorFactory.h
    source/Irrlicht/CDefaultSceneNodeFactory.cpp
    source/Irrlicht/CDefaultSceneNodeFactory.h
    source/Irrlicht/CGeometryCreator.cpp
    source/Irrlicht/CGeometryCreator.h
    source/Irrlicht/CMeshCache.cpp
    source/Irrlicht/CMeshCache.h
    source/Irrlicht/CMeshManipulator.cpp
    source/Irrlicht/CMeshManipulator.h
    source/Irrlicht/CSceneLoaderIrr.cpp
    source/Irrlicht/CSceneLoaderIrr.h
    source/Irrlicht/CSceneManager.cpp
    source/Irrlicht/CSceneManager.h)

set(source_LOADERS
    source/Irrlicht/C3DSMeshFileLoader.cpp
    source/Irrlicht/C3DSMeshFileLoader.h
    source/Irrlicht/CSMFMeshFileLoader.cpp
    source/Irrlicht/CSMFMeshFileLoader.h
    source/Irrlicht/CAnimatedMeshHalfLife.cpp
    source/Irrlicht/CAnimatedMeshHalfLife.h
    source/Irrlicht/CAnimatedMeshMD2.cpp
    source/Irrlicht/CAnimatedMeshMD2.h
    source/Irrlicht/CAnimatedMeshMD3.cpp
    source/Irrlicht/CAnimatedMeshMD3.h
    source/Irrlicht/CB3DMeshFileLoader.cpp
    source/Irrlicht/CB3DMeshFileLoader.h
    source/Irrlicht/CBSPMeshFileLoader.cpp
    source/Irrlicht/CBSPMeshFileLoader.h
    source/Irrlicht/CColladaFileLoader.cpp
    source/Irrlicht/CColladaFileLoader.h
    source/Irrlicht/CCSMLoader.cpp
    source/Irrlicht/CCSMLoader.h
    source/Irrlicht/CDMFLoader.cpp
    source/Irrlicht/CDMFLoader.h
    source/Irrlicht/CIrrMeshFileLoader.cpp
    source/Irrlicht/CIrrMeshFileLoader.h
    source/Irrlicht/CLMTSMeshFileLoader.cpp
    source/Irrlicht/CLMTSMeshFileLoader.h
    source/Irrlicht/CLWOMeshFileLoader.cpp
    source/Irrlicht/CLWOMeshFileLoader.h
    source/Irrlicht/CMD2MeshFileLoader.cpp
    source/Irrlicht/CMD2MeshFileLoader.h
    source/Irrlicht/CMD3MeshFileLoader.cpp
    source/Irrlicht/CMD3MeshFileLoader.h
    source/Irrlicht/CMS3DMeshFileLoader.cpp
    source/Irrlicht/CMS3DMeshFileLoader.h
    source/Irrlicht/CMY3DHelper.h
    source/Irrlicht/CMY3DMeshFileLoader.cpp
    source/Irrlicht/CMY3DMeshFileLoader.h
    source/Irrlicht/COBJMeshFileLoader.cpp
    source/Irrlicht/COBJMeshFileLoader.h
    source/Irrlicht/COCTLoader.cpp
    source/Irrlicht/COCTLoader.h
    source/Irrlicht/COgreMeshFileLoader.cpp
    source/Irrlicht/COgreMeshFileLoader.h
    source/Irrlicht/CPLYMeshFileLoader.cpp
    source/Irrlicht/CPLYMeshFileLoader.h
    source/Irrlicht/CQ3LevelMesh.cpp
    source/Irrlicht/CQ3LevelMesh.h
    source/Irrlicht/CSkinnedMesh.cpp
    source/Irrlicht/CSkinnedMesh.h
    source/Irrlicht/CSTLMeshFileLoader.cpp
    source/Irrlicht/CSTLMeshFileLoader.h
    source/Irrlicht/CXMeshFileLoader.cpp
    source/Irrlicht/CXMeshFileLoader.h
    source/Irrlicht/dmfsupport.h)

set(source_SCENENODES
    source/Irrlicht/CAnimatedMeshSceneNode.cpp
    source/Irrlicht/CAnimatedMeshSceneNode.h
    source/Irrlicht/CBillboardSceneNode.cpp
    source/Irrlicht/CBillboardSceneNode.h
    source/Irrlicht/CBoneSceneNode.cpp
    source/Irrlicht/CBoneSceneNode.h
    source/Irrlicht/CCameraSceneNode.cpp
    source/Irrlicht/CCameraSceneNode.h
    source/Irrlicht/CCubeSceneNode.cpp
    source/Irrlicht/CCubeSceneNode.h
    source/Irrlicht/CDummyTransformationSceneNode.cpp
    source/Irrlicht/CDummyTransformationSceneNode.h
    source/Irrlicht/CEmptySceneNode.cpp
    source/Irrlicht/CEmptySceneNode.h
    source/Irrlicht/CLightSceneNode.cpp
    source/Irrlicht/CLightSceneNode.h
    source/Irrlicht/CMeshSceneNode.cpp
    source/Irrlicht/CMeshSceneNode.h
    source/Irrlicht/COctreeSceneNode.cpp
    source/Irrlicht/COctreeSceneNode.h
    source/Irrlicht/CQuake3ShaderSceneNode.cpp
    source/Irrlicht/CQuake3ShaderSceneNode.h
    source/Irrlicht/CShadowVolumeSceneNode.cpp
    source/Irrlicht/CShadowVolumeSceneNode.h
    source/Irrlicht/CSkyBoxSceneNode.cpp
    source/Irrlicht/CSkyBoxSceneNode.h
    source/Irrlicht/CSkyDomeSceneNode.cpp
    source/Irrlicht/CSkyDomeSceneNode.h
    source/Irrlicht/CSphereSceneNode.cpp
    source/Irrlicht/CSphereSceneNode.h
    source/Irrlicht/CTerrainSceneNode.cpp
    source/Irrlicht/CTerrainSceneNode.h
    source/Irrlicht/CTextSceneNode.cpp
    source/Irrlicht/CTextSceneNode.h
    source/Irrlicht/CVolumeLightSceneNode.cpp
    source/Irrlicht/CVolumeLightSceneNode.h
    source/Irrlicht/CWaterSurfaceSceneNode.cpp
    source/Irrlicht/CWaterSurfaceSceneNode.h)

set(source_PARTICLE
    source/Irrlicht/CParticleAnimatedMeshSceneNodeEmitter.cpp
    source/Irrlicht/CParticleAttractionAffector.cpp
    source/Irrlicht/CParticleBoxEmitter.cpp
    source/Irrlicht/CParticleBoxEmitter.h
    source/Irrlicht/CParticleCylinderEmitter.cpp
    source/Irrlicht/CParticleFadeOutAffector.cpp
    source/Irrlicht/CParticleFadeOutAffector.h
    source/Irrlicht/CParticleGravityAffector.cpp
    source/Irrlicht/CParticleGravityAffector.h
    source/Irrlicht/CParticleMeshEmitter.cpp
    source/Irrlicht/CParticlePointEmitter.cpp
    source/Irrlicht/CParticlePointEmitter.h
    source/Irrlicht/CParticleRingEmitter.cpp
    source/Irrlicht/CParticleRotationAffector.cpp
    source/Irrlicht/CParticleScaleAffector.cpp
    source/Irrlicht/CParticleScaleAffector.cpp
    source/Irrlicht/CParticleScaleAffector.h
    source/Irrlicht/CParticleScaleAffector.h
    source/Irrlicht/CParticleSphereEmitter.cpp
    source/Irrlicht/CParticleSystemSceneNode.cpp
    source/Irrlicht/CParticleSystemSceneNode.h)


set(source_COLLISION
    source/Irrlicht/CMetaTriangleSelector.cpp
    source/Irrlicht/CMetaTriangleSelector.h
    source/Irrlicht/COctreeTriangleSelector.cpp
    source/Irrlicht/COctreeTriangleSelector.h
    source/Irrlicht/CSceneCollisionManager.cpp
    source/Irrlicht/CSceneCollisionManager.h
    source/Irrlicht/CTerrainTriangleSelector.cpp
    source/Irrlicht/CTerrainTriangleSelector.h
    source/Irrlicht/CTriangleBBSelector.cpp
    source/Irrlicht/CTriangleBBSelector.h
    source/Irrlicht/CTriangleSelector.cpp
    source/Irrlicht/CTriangleSelector.h
    source/Irrlicht/Octree.h)

set(source_ANIMATORS
    source/Irrlicht/CSceneNodeAnimatorCameraFPS.cpp
    source/Irrlicht/CSceneNodeAnimatorCameraFPS.h
    source/Irrlicht/CSceneNodeAnimatorCameraMaya.cpp
    source/Irrlicht/CSceneNodeAnimatorCameraMaya.h
    source/Irrlicht/CSceneNodeAnimatorCollisionResponse.cpp
    source/Irrlicht/CSceneNodeAnimatorCollisionResponse.h
    source/Irrlicht/CSceneNodeAnimatorDelete.cpp
    source/Irrlicht/CSceneNodeAnimatorDelete.h
    source/Irrlicht/CSceneNodeAnimatorFlyCircle.cpp
    source/Irrlicht/CSceneNodeAnimatorFlyCircle.h
    source/Irrlicht/CSceneNodeAnimatorFlyStraight.cpp
    source/Irrlicht/CSceneNodeAnimatorFlyStraight.h
    source/Irrlicht/CSceneNodeAnimatorFollowSpline.cpp
    source/Irrlicht/CSceneNodeAnimatorFollowSpline.h
    source/Irrlicht/CSceneNodeAnimatorRotation.cpp
    source/Irrlicht/CSceneNodeAnimatorRotation.h
    source/Irrlicht/CSceneNodeAnimatorTexture.cpp
    source/Irrlicht/CSceneNodeAnimatorTexture.h)

set(source_WRITERS
    source/Irrlicht/CColladaMeshWriter.cpp
    source/Irrlicht/CColladaMeshWriter.h
    source/Irrlicht/CIrrMeshWriter.cpp
    source/Irrlicht/CIrrMeshWriter.h
    source/Irrlicht/COBJMeshWriter.cpp
    source/Irrlicht/COBJMeshWriter.h
    source/Irrlicht/CPLYMeshWriter.cpp
    source/Irrlicht/CPLYMeshWriter.h
    source/Irrlicht/CSTLMeshWriter.cpp
    source/Irrlicht/CSTLMeshWriter.h)

set(source_IO
    source/Irrlicht/CAttributeImpl.h
    source/Irrlicht/CAttributes.cpp
    source/Irrlicht/CAttributes.h
    source/Irrlicht/CFileList.cpp
    source/Irrlicht/CFileList.h
    source/Irrlicht/CFileSystem.cpp
    source/Irrlicht/CFileSystem.h
    source/Irrlicht/CLimitReadFile.cpp
    source/Irrlicht/CLimitReadFile.h
    source/Irrlicht/CMemoryFile.cpp
    source/Irrlicht/CMemoryFile.h
    source/Irrlicht/CMountPointReader.cpp
    source/Irrlicht/CMountPointReader.h
    source/Irrlicht/CNPKReader.cpp
    source/Irrlicht/CNPKReader.h
    source/Irrlicht/CPakReader.cpp
    source/Irrlicht/CPakReader.h
    source/Irrlicht/CReadFile.cpp
    source/Irrlicht/CReadFile.cpp
    source/Irrlicht/CReadFile.h
    source/Irrlicht/CTarReader.cpp
    source/Irrlicht/CTarReader.h
    source/Irrlicht/CWADReader.cpp
    source/Irrlicht/CWADReader.h
    source/Irrlicht/CWriteFile.cpp
    source/Irrlicht/CWriteFile.h
    source/Irrlicht/CXMLReader.cpp
    source/Irrlicht/CXMLReader.h
    source/Irrlicht/CXMLReaderImpl.h
    source/Irrlicht/CXMLWriter.cpp
    source/Irrlicht/CXMLWriter.h
    source/Irrlicht/CZipReader.cpp
    source/Irrlicht/CZipReader.h
    source/Irrlicht/IAttribute.h
    source/Irrlicht/irrXML.cpp)

set(source_IRR
    source/Irrlicht/CIrrDeviceConsole.cpp
    source/Irrlicht/CIrrDeviceConsole.h
    source/Irrlicht/CIrrDeviceSDL.cpp
    source/Irrlicht/CIrrDeviceSDL.h
    source/Irrlicht/CIrrDeviceStub.cpp
    source/Irrlicht/CIrrDeviceStub.h
    source/Irrlicht/CIrrDeviceWin32.cpp
    source/Irrlicht/CIrrDeviceWin32.h
    source/Irrlicht/CLogger.cpp
    source/Irrlicht/CLogger.h
    source/Irrlicht/COSOperator.cpp
    source/Irrlicht/COSOperator.h
    source/Irrlicht/CTimer.h
    source/Irrlicht/Irrlicht.cpp
    source/Irrlicht/os.cpp
    source/Irrlicht/os.h)

set(source_EXTERN
    source/Irrlicht/lzma/LzmaDec.c
    source/Irrlicht/lzma/LzmaDec.h
    source/Irrlicht/lzma/Types.h)

set(source_ZLIB
    source/Irrlicht/zlib/adler32.c
    source/Irrlicht/zlib/compress.c
    source/Irrlicht/zlib/crc32.c
    source/Irrlicht/zlib/crc32.h
    source/Irrlicht/zlib/deflate.c
    source/Irrlicht/zlib/deflate.h
    source/Irrlicht/zlib/inffast.c
    source/Irrlicht/zlib/inffast.h
    source/Irrlicht/zlib/inffixed.h
    source/Irrlicht/zlib/inflate.c
    source/Irrlicht/zlib/inftrees.c
    source/Irrlicht/zlib/inftrees.h
    source/Irrlicht/zlib/trees.c
    source/Irrlicht/zlib/trees.h
    source/Irrlicht/zlib/uncompr.c
    source/Irrlicht/zlib/zconf.h
    source/Irrlicht/zlib/zlib.h
    source/Irrlicht/zlib/zutil.c
    source/Irrlicht/zlib/zutil.h)

set(source_JPEGLIB
    source/Irrlicht/jpeglib/cderror.h
    source/Irrlicht/jpeglib/jaricom.c
    source/Irrlicht/jpeglib/jcapimin.c
    source/Irrlicht/jpeglib/jcapistd.c
    source/Irrlicht/jpeglib/jcarith.c
    source/Irrlicht/jpeglib/jccoefct.c
    source/Irrlicht/jpeglib/jccolor.c
    source/Irrlicht/jpeglib/jcdctmgr.c
    source/Irrlicht/jpeglib/jchuff.c
    source/Irrlicht/jpeglib/jcinit.c
    source/Irrlicht/jpeglib/jcmainct.c
    source/Irrlicht/jpeglib/jcmarker.c
    source/Irrlicht/jpeglib/jcmaster.c
    source/Irrlicht/jpeglib/jcomapi.c
    source/Irrlicht/jpeglib/jconfig.h
    source/Irrlicht/jpeglib/jcparam.c
    source/Irrlicht/jpeglib/jcprepct.c
    source/Irrlicht/jpeglib/jcsample.c
    source/Irrlicht/jpeglib/jctrans.c
    source/Irrlicht/jpeglib/jdapimin.c
    source/Irrlicht/jpeglib/jdapistd.c
    source/Irrlicht/jpeglib/jdarith.c
    source/Irrlicht/jpeglib/jdatadst.c
    source/Irrlicht/jpeglib/jdatasrc.c
    source/Irrlicht/jpeglib/jdcoefct.c
    source/Irrlicht/jpeglib/jdcolor.c
    source/Irrlicht/jpeglib/jdct.h
    source/Irrlicht/jpeglib/jddctmgr.c
    source/Irrlicht/jpeglib/jdhuff.c
    source/Irrlicht/jpeglib/jdinput.c
    source/Irrlicht/jpeglib/jdmainct.c
    source/Irrlicht/jpeglib/jdmarker.c
    source/Irrlicht/jpeglib/jdmaster.c
    source/Irrlicht/jpeglib/jdmerge.c
    source/Irrlicht/jpeglib/jdpostct.c
    source/Irrlicht/jpeglib/jdsample.c
    source/Irrlicht/jpeglib/jdtrans.c
    source/Irrlicht/jpeglib/jerror.c
    source/Irrlicht/jpeglib/jerror.h
    source/Irrlicht/jpeglib/jfdctflt.c
    source/Irrlicht/jpeglib/jfdctfst.c
    source/Irrlicht/jpeglib/jfdctint.c
    source/Irrlicht/jpeglib/jidctflt.c
    source/Irrlicht/jpeglib/jidctfst.c
    source/Irrlicht/jpeglib/jidctint.c
    source/Irrlicht/jpeglib/jinclude.h
    source/Irrlicht/jpeglib/jmemmgr.c
    source/Irrlicht/jpeglib/jmemnobs.c
    source/Irrlicht/jpeglib/jmemsys.h
    source/Irrlicht/jpeglib/jmorecfg.h
    source/Irrlicht/jpeglib/jpegint.h
    source/Irrlicht/jpeglib/jpeglib.h
    source/Irrlicht/jpeglib/jquant1.c
    source/Irrlicht/jpeglib/jquant2.c
    source/Irrlicht/jpeglib/jutils.c
    source/Irrlicht/jpeglib/jversion.h)

set(source_LIBPNG
        source/Irrlicht/libpng/pnglibconf.h
        source/Irrlicht/libpng/png.c
        source/Irrlicht/libpng/png.h
        source/Irrlicht/libpng/pngconf.h
        source/Irrlicht/libpng/pngerror.c
        source/Irrlicht/libpng/pngget.c
        source/Irrlicht/libpng/pngmem.c
        source/Irrlicht/libpng/pngpread.c
        source/Irrlicht/libpng/pngread.c
        source/Irrlicht/libpng/pngrio.c
        source/Irrlicht/libpng/pngrtran.c
        source/Irrlicht/libpng/pngrutil.c
        source/Irrlicht/libpng/pngset.c
        source/Irrlicht/libpng/pngtrans.c
        source/Irrlicht/libpng/pngwio.c
        source/Irrlicht/libpng/pngwrite.c
        source/Irrlicht/libpng/pngwtran.c
        source/Irrlicht/libpng/pngwutil.c
        source/Irrlicht/libpng/pngpriv.h)

set(source_AESGLADMAN
    source/Irrlicht/aesGladman/aes.h
    source/Irrlicht/aesGladman/aescrypt.cpp
    source/Irrlicht/aesGladman/aeskey.cpp
    source/Irrlicht/aesGladman/aesopt.h
    source/Irrlicht/aesGladman/aestab.cpp
    source/Irrlicht/aesGladman/fileenc.cpp
    source/Irrlicht/aesGladman/fileenc.h
    source/Irrlicht/aesGladman/hmac.cpp
    source/Irrlicht/aesGladman/hmac.h
    source/Irrlicht/aesGladman/prng.cpp
    source/Irrlicht/aesGladman/prng.h
    source/Irrlicht/aesGladman/pwd2key.cpp
    source/Irrlicht/aesGladman/pwd2key.h
    source/Irrlicht/aesGladman/sha1.cpp
    source/Irrlicht/aesGladman/sha1.h
    source/Irrlicht/aesGladman/sha2.cpp
    source/Irrlicht/aesGladman/sha2.h)

set(source_BZIP2
    source/Irrlicht/bzip2/blocksort.c
    source/Irrlicht/bzip2/bzcompress.c
    source/Irrlicht/bzip2/bzlib.c
    source/Irrlicht/bzip2/bzlib.h
    source/Irrlicht/bzip2/bzlib_private.h
    source/Irrlicht/bzip2/crctable.c
    source/Irrlicht/bzip2/decompress.c
    source/Irrlicht/bzip2/huffman.c
    source/Irrlicht/bzip2/randtable.c)

add_library(irrlicht
    ${source_GUI}
    ${source_VIDEO}
    ${source_SOFTWARE}
    ${source_OPENGL}
    ${source_D3D8}
    ${source}
    ${source_WRITER}
    ${source_D3D9}
    ${source_BURNINGVIDEO}
    ${source_SCENEIMPL}
    ${source_LOADERS}
    ${source_SCENENODES}
    ${source_PARTICLE}
    ${source_COLLISION}
    ${source_ANIMATORS}
    ${source_WRITERS}
    ${source_IO}
    ${source_IRR}
    ${source_EXTERN}
    ${source_ZLIB}
    ${source_JPEGLIB}
    ${source_LIBPNG}
    ${source_AESGLADMAN}
    ${source_BZIP2})